<resources>
    <string name="app_name">Fun Calculator 2015</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dispHint">Enter the Value</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mul">*</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="zero">0</string>
    <string name="cancel">cancel</string>
    <string name="dot">.</string>
    <string name="back"><![CDATA[<-]]> </string>
    <string name="equal">=</string>
    <string name="AC">AC</string>
    <string name="bracket">(</string>
    <string name="brecket">)</string>
    <string name="percentage">%</string>
<string name="interestitial"> ca-app-pub-3092784905447271/7835328740</string>

</resources>
