<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLL"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/theme21"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    tools:context=".smart_claculator">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="0dp"
        android:text="Calculator"
        android:textColor="@color/black"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/display"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_text_box"
            android:editable="false"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/dispHint"
            android:inputType="numberDecimal"

            android:paddingLeft="7dp"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="20dp"

            >

            <Button
                android:id="@+id/AC"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/entr"
                android:gravity="center"
                android:text="@string/AC"
                android:textSize="20dp"


                />

            <Button
                android:id="@+id/brecket"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/bracket"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bracket"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/brecket"
                android:textSize="20dp" />

            <Button
                android:id="@+id/percentage"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/percentage"
                android:textColorHint="@color/transparent"
                android:textSize="25dp"


                />

            <Button
                android:id="@+id/add"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/add"
                android:textSize="20dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="20dp"

            >

            <Button
                android:id="@+id/seven"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/seven"
                android:textSize="20dp"


                />

            <Button
                android:id="@+id/eight"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/eight"
                android:textSize="20dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/nine"
                android:textSize="20dp" />

            <Button
                android:id="@+id/div"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/div"
                android:textSize="20dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/four"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/four"
                android:textSize="20dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/five"
                android:textSize="20dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/six"
                android:textSize="20dp" />

            <Button
                android:id="@+id/mul"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/mul"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/one"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="20dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/two"
                android:textSize="20dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/three"
                android:textSize="20dp" />

            <Button
                android:id="@+id/sub"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/sub"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/zero"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="20dp"

                />

            <Button
                android:id="@+id/dot"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/dot"
                android:textSize="20dp" />

            <Button
                android:id="@+id/back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/butn_bag"
                android:gravity="center"
                android:text="@string/back"
                android:textSize="20dp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/entr"
                android:gravity="center"
                android:text="@string/equal"
                android:textSize="20dp"

                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
